Revising treePlotNew to provide improved image for coloring branch lengths
Added default to increase levels, reduce size of legend, and make palette
color-blind-friendly.

Still remaining:
-avoid plotting if margins are too small for device (gets stuck with device on)
-put treePlotNew into treePlotRers wrapper
-fix legend so breaks and labels align
-ensure middle color break contains zero if values extend to positive and negative

--- a/vignettes/BioinformaticsRERconvergeSupp.Rmd
+++ b/vignettes/BioinformaticsRERconvergeSupp.Rmd
@@ -173,7 +173,7 @@ strwrap(gsub(":",write.tree(bend3rers),replacement=": "))
 write.tree(bend3rers, file='BEND3RER.nwk')
 ```
 
-The function `returnRersAsTreesAll` will produce an object of class "multiPhylo", with each element containing a named gene tree with branch lengths representing RERs for that gene. This can then be saved to a file using `write.tree` for further analysis or customized plotting.
+The function `returnRersAsTreesAll` will produce an object of class "multiPhylo", with each element containing a named gene tree with branch lengths representing RERs for that gene. This can then be used for further analysis or customized plotting, and it can be saved to a file using `write.tree`.
 
 ```{r, message = FALSE, cache = TRUE}
 multirers = returnRersAsTreesAll(toyTrees,mamRERw)
